[*] numconlines      - Returns the current number of lines on the console. (e.g. echo $numconlines // Example output: 153)
[*] Multiple Idents  - New helper aliases for voting for SURV, TPF, and TLSS. (e.g. /surv ac_desert)
[*] looplist         - Browses a list executing a body for each element (e.g. looplist "zero one two three" number [ echo $number ])
[*] gametimestart    - Returns the time (in milliseconds) when the last map was loaded.
[*] mapbackupsonsave - Determines if map backups (.bak) should be created when a map is saved.
[*] "Sleeps" can be persistent. (e.g. "Persist" even through map loads - new optional 3rd argument of the /sleep command)
[*] Substr crash bug is fixed. Also the command can now use a negative position value.
[*] New stat in (pstat_score) for teamkills. New list is: FLAGS FRAGS DEATHS POINTS TEAM TEAMKILLS NAME // TODO move to compatibility.cfg
[*] on_quit.cfg for deleting aliases from saved.cfg upon quit.
[*] Missing bracket ([], (), etc.) errors now also notify the client of what file the error resides in.
[*] New automatically executed scripts folder in the root install directory of AC.
[*] New delta_edit/game_# aliases for easily tweaking gamma/fov/flyspeed on-the-fly. (e.g. Hold F5 and scroll for gamma, F6 for fov, bind "domodifier 10" to a key for flyspeed)
[*] The /mapsize command now silenty returns 6-12, instead of conoutf'ing ssize.
[*] The /newmap command has a (temporary) new range of 6-9. // TODO: Fix client crashing on /newmap >9!
[*] The /spectate command can now only be used if connected to a server.
[*] The /togglebotview command can no longer be used in arena modes.
[*] /keybind bug fix. No more client crash if the argument is an unknown key.

I18n / L10n
---------------------

[*] Client now tries to set the LANG alias if it's not defined.
[*] fixed LANG for windows (breaks Win98/2K compatibility!)
[*] Float separator set to "." (dot) regardless of locale.