@@ -3,7 +3,7 @@
 curmode = [ result $gamemode ]
 getclientmode = [ result $gamemode ]
 
-curteam = [ if $numargs [ result (player $arg1 team) ] [ result (player1 team) ] ]
+curteam = [ if (&& $numargs (isclient $arg1)) [ result (player $arg1 team) ] [ result (player1 team) ] ]
 
 pstat_score = [
   if (isclient $arg1) [
