@@ -730,6 +730,10 @@ docident [setbottimeout] [set the length of matches against bots];
 docargument [M] [mode] [1 or 2] [0];
 docargument [T] [time (in minutes)] [1-60] [0];
 docremark [The first argument "M" needs to be 1 for setting the FFA-timeout or 2 for the Team-Mode-timeout.];
+docident [isclient] [Determines if the client number given is a valid client "(player)".];
+docargument [C] [client number [] [0];
+docexample [echo (isclient 0)] [Example output: 1];
+docexample [echo (isclient 32)] [Example output: 0];
 docsection [Editing]
 docident [addpath1way1] [];
 docident [addpath1way2] [];
